v0.1.8-dev # habilidades gestionadas en enum